3_TypeChecking/test/good/good06.cc
void main() {
	int a = 1;
	int b = 2;
	int c;

	c = a + b;
	c = a * b;
	c = a / b;
	c = a++;
	c = b--;
	
	c <= a;
}