3_TypeChecking/test/bad/bad02.cc
int main() {
	int i = true;
}